--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
     <main class="l-main bd-grid">
         <div class="home">
             <div class="home__information">
-                <span class="home__pressent anime-text">Namaste, My name is</span>
+                <span class="home__pressent anime-text">Namaskaar, My name is</span>
                 <h1 class="home__title anime-text">Dharmesh Sharma</h1>
                 <span class="home__skill anime-text">:)</span>
 
                 <div>
-                    <a href="#" class="home__button anime-text">DOWNLOAD CV</a>
+                    <a href="#" class="home__button anime-text">Soon</a>
                 </div>
             </div>
 
@@ -55,9 +55,13 @@
             </div>
 
             <div class="home__social">
-                <ion-icon name="logo-youtube" class="home__social-icon"></ion-icon>
-                <ion-icon name="logo-github" class="home__social-icon"></ion-icon>
-                <ion-icon name="logo-twitter" class="home__social-icon"></ion-icon>
+                <a href="https://youtu.be/Fo1Kpdb4UG4">
+                    <ion-icon name="logo-youtube" class="home__social-icon"></ion-icon>
+                </a>
+                <a href="https://github.com/TheCalculas" >
+                    <ion-icon name="logo-github" class="home__social-icon"></ion-icon>
+                </a>
+                <a href="https://twitter.com/calculasmusic"><ion-icon name="logo-twitter" class="home__social-icon"></ion-icon></a>
             </div>
 
         </div>
