--- a/index.html
+++ b/index.html
@@ -25,8 +25,6 @@
                 <ul class="nav__list">
                     <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
                     <li class="nav__item"><a href="#" class="nav__link">About</a></li>
-
-
                     <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
                 </ul>
             </div>
@@ -41,12 +39,12 @@
     <main class="l-main bd-grid">
         <div class="home">
             <div class="home__information">
-                <span class="home__pressent anime-text">Namaskaar, My name is</span>
+                <span class="home__pressent anime-text">Namaskaar, I am</span>
                 <h1 class="home__title anime-text">Dharmesh Sharma</h1>
-                <span class="home__skill anime-text">:)</span>
+                <span class="home__skill anime-text">CSE UnderGrad at MNIT</span>
 
                 <div>
-                    <a href="#" class="home__button anime-text">Soon</a>
+                    <a href="#" class="home__button anime-text">Working on some crazy stuff</a>
                 </div>
             </div>
 
@@ -58,10 +56,12 @@
                 <a href="https://youtu.be/Fo1Kpdb4UG4">
                     <ion-icon name="logo-youtube" class="home__social-icon"></ion-icon>
                 </a>
-                <a href="https://github.com/TheCalculas" >
+                <a href="https://github.com/TheCalculas">
                     <ion-icon name="logo-github" class="home__social-icon"></ion-icon>
                 </a>
-                <a href="https://twitter.com/calculasmusic"><ion-icon name="logo-twitter" class="home__social-icon"></ion-icon></a>
+                <a href="https://twitter.com/calculasmusic">
+                    <ion-icon name="logo-twitter" class="home__social-icon"></ion-icon>
+                </a>
             </div>
 
         </div>
