--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <ul class="nav__list">
                     <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
                     <li class="nav__item"><a href="#" class="nav__link">About</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
+                    <li class="nav__item"><a href="mailto:composerdharmesh@gmail.com" class="nav__link">Contact</a></li>
                 </ul>
             </div>
 
