--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
     <main class="l-main bd-grid">
         <div class="home">
             <div class="home__information">
-                <span class="home__pressent anime-text">Namaskaar, I am</span>
+                <span class="home__pressent anime-text">Hey, Nice to see you. I am</span>
                 <h1 class="home__title anime-text">Dharmesh Sharma</h1>
-                <span class="home__skill anime-text">CSE UnderGrad at MNIT</span>
+                <span class="home__skill anime-text">:)</span>
 
                 <div>
-                    <a href="#" class="home__button anime-text">Working on some crazy stuff</a>
+                    <a href="#" class="home__button anime-text">Click here to see magic</a>
                 </div>
             </div>
 
