--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <span class="home__skill anime-text">:)</span>
 
                 <div>
-                    <a href="#" class="home__button anime-text">Click here to see magic</a>
+                    <a href="Programming/index.html" class="home__button anime-text">Click here to see magic</a>
                 </div>
             </div>
 
