--- a/Programming/index.html
+++ b/Programming/index.html
@@ -57,18 +57,21 @@
             </section>
 
             <!--========== C++ ==========-->
-            <section class="share section bd-container" id="cpp">
+            <section class="home" id="cpp">
 
-                <div class="share__container bd-grid">
-                    <div class="share__data">
-                        <h1 class="home__title"> C++  </h1>
-                        <p class="share__description">Here you can track my C++ journey</p>
-                        <a href="#" class="button">Get Started</a>
-                    </div>
-
+                <div class="home__container bd-container bd-grid">
+                    
                     <div class="share__img">
                         <img src="assets/img/shared.png" alt="">
                     </div>
+
+                    <div class="home__data">
+                        <h1 class="home__title"> C++  </h1>
+                        <p class="home__description">Here you can track my C++ journey</p>
+                        <a href="#" class="button">Get Started</a>
+                    </div>
+
+                    
                 </div>
             </section>
 
