--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <span class="home__skill anime-text">:)</span>
 
                 <div>
-                    <a href="https://open.spotify.com/user/xg4hajyrsq5om3uanqjacvvt4?si=7d4fcac75beb4879" class="home__button anime-text">Nice to see ya</a>
+                    <a href="https://open.spotify.com/user/xg4hajyrsq5om3uanqjacvvt4?si=7d4fcac75beb4879" class="home__button anime-text">Take me to Spotify</a>
                 </div>
             </div>
 
